# Snaketype

./: .gitignore  README.md  pyproject.toml  pytermcolors.py  requirements.txt  snaketype.py
src/snaketype/: core.py  fallback.py  filemanager.py  main.py  ui.py  utils.py
src/snaketype/io/: filemanager.py  ui.py
